# thor-scsi-lib

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.am  README.rst  build.sh  configure.ac  install.rst  make.sh  make_Thor_scsi.sh  requirements.txt
TPSA/: CMakeLists.txt  LieLib.f  Makefile.am  TPSALib.f
docs/Sphinx/: pyproject.toml
python/: CMakeLists.txt  gcc_clang_stub.sh  johan_build.sh  link_command.sh  macbook_build.sh  requirements.txt  setup.cfg  setup.py
python/doc/: conf.py  index.rst
python/doc/api/: flame.rst  index.rst  tslib.rst  utils.rst
python/examples/: a_drift.py  a_machine.py  a_machine_wo_lat_file.py  a_mpole.py  a_mul.py  a_quad.py  aperture.py  bench_mark_jb.py  benchmark_jb.py  check_sextupoles.py  closed_orbit.py  demo.ipynb  demo.py  engineering_tolerances_commands.py  linear_chrom.py  list_lattice.py  main_jb.py  mat_test.py  matching.py  nlk.py  observe_pass.py  observe_pass2.py  paul_simon_art_garfunkel.py  propagate.py  pyat_jb.py  radiate.py  select_part.py  simon.py  single_wire.py  tst.py  tune_footprint.py  twiss.py  twiss_jb.py  use_case_ps.py  variance_multipoles.py
python/examples/lattices/: tme.lat  tme_rb.lat
python/examples/nlk/: emittance_propagate.py  nlk.py
python/examples/rest_api/: a_mpole.py  closed_orbit.py
python/examples/use_cases/: FCWC_clean.py  GetTbTData.py  ake_match.py  ake_uc.py  ampl_orb.py  apoachromat.py  bessy_ii_middle_layer.ipynb  bessy_ii_middle_layer.py  compute_alpha.py  compute_alpha_c.py  compute_orbit.py  compute_orbit_2.py  compute_orbit_3.py  drv_terms.py  for_Ake.py  for_Ake_1.py  for_Ake_2.py  gaelic_football.py  klein_gordon.py  lat_prop.py  lat_prop_nl.py  lex_yacc.py  lin_opt.py  map_norm.py  match_1.py  match_2.py  match_transp_line.py  match_transp_line_2.py  matching.py  max_4u_1.py  max_4u_2.py  max_4u_3.py  max_4u_4.py  max_4u_5.py  max_4u_6.py  max_4u_fit_nu.py  max_4u_match.py  max_4u_orbit.py  max_4u_orbit_2.py  max_4u_orbit_3.py  (+46 more)
python/src/: README.txt  accelerator.cc  aperture.cc  arma.cc  config_type.cc  custom.cc  elements.cc  enums.cc  flame.cc  interpolation.cc  lattice.cc  machine.cc  observer.cc  radiation.cc  thor_py.cc  thor_py.h  thor_scsi.cc  thor_scsi.h  tps.cc
python/tests/: backtracking_test.py  closed_orbit_test.py  constants_test.py  element_test.py  knobbable_test.py  lattice_test.py  math_test.py  multipoles_test.py  np_rand_test.py  sort_test.py  ss_vect_test.py  test_linalg.py  test_phase_space.py
python/tests/lattices/: b2_stduser_beamports_blm_tracy_corr.lat
python/thor/: __init__.py  lib.py
python/thor_scsi/: __init__.py  factory.py  observer.py  utils.py
python/thor_scsi/elements/: __init__.py  air_coil.py
python/thor_scsi/obsolete/: utils.py
python/thor_scsi/utils/: __init__.py  accelerator.py  bessy_ii_mml.py  closed_orbit.py  courant_snyder.py  engineering.py  extract_info.py  fft.py  get_set_mpole.py  index_class.py  knobs.py  lattice_properties.py  linalg.py  linear_optics.py  math.py  math_tools.py  nonlin_dyn.py  output.py  periodic_structure.py  phase_advance.py  phase_space_vector.py  prm_class.py  radiate.py  tbt_bpm.py  tpsa_class.py  twiss_output.py
python/utils/: simple2srw.py  tbt.py
src/: CMakeLists.txt
src/thor_scsi/: CMakeLists.txt  soleillib.cc  ss_vect_tps.cc  t2cell.cc
src/thor_scsi/cmake/: thor_scsiConfig.cmake.in
src/thor_scsi/core/: CMakeLists.txt  aperture.cc  aperture.h  cell_void.cc  cell_void.h  cells.h  config.h  constants.h  elements_basis.cc  elements_basis.h  exceptions.h  field_interpolation.cc  field_interpolation.h  harmonics.cc  harmonics.h  harmonics_extra.cc  internals.h  machine.cc  machine.h  math_comb.cc  math_comb.h  multipole_types.h  multipoles.cc  multipoles.h  multipoles_extra.cc  test_harmonics.cc  test_multipoles_planar.cc  test_random.cc  test_transform.cc  test_transform_phase_space.cc  test_two_dimensional_multipoles.cc  transform.cc  transform.h  transform_phase_space.h
src/thor_scsi/custom/: CMakeLists.txt  aircoil_interpolation.cc  aircoil_interpolation.h  nonlinear_kicker.cc  nonlinear_kicker.h  nonlinear_kicker_interpolation.cc  nonlinear_kicker_interpolation.h  test_aircoil_interpolation.cc  test_nonlinear_kicker.cc  test_nonlinear_kicker_interpolation.cc
src/thor_scsi/elements/: CMakeLists.txt  a_kick.cc  bending.h  bpm.h  cavity.cc  cavity.h  check_multipole.cc  check_multipole.h  classical_magnet.h  constants.h  corrector.h  drift.cc  drift.h  element_helpers.cc  element_helpers.h  element_local_coordinates.h  elements_enums.h  enums.h  field_kick.cc  field_kick.h  field_kick_api.h  field_kick_compute_constants.py  marker.cc  marker.h  mpole.cc  mpole.h  multipole.h  octupole.h  quadrupole.h  radiation_delegate.cc  radiation_delegate.h  radiation_delegate_api.h  sextupole.h  standard_aperture.cc  standard_aperture.h  standard_observer.cc  standard_observer.h  test_cavity.cc  test_drift.cc  test_field_kick.cc  (+11 more)
src/thor_scsi/examples/: CMakeLists.txt  build_accelerator.cc  dragt_finn_factorisation.cc  lattice_pass.cc
src/thor_scsi/obsolete/: fft.cc
src/thor_scsi/on_hold/: interpolation_elements.cc  modnaff.cc  t2elem.cc  t2lat.cc
src/thor_scsi/std_machine/: CMakeLists.txt  accelerator.cc  accelerator.h  std_machine.cc  std_machine.h  test_accelerator.cc  test_accelerator_config.cc  test_std_machine.cc
src/tps/: CMakeLists.txt  config.h  enums.h  exceptions.h  externs.h  field.cc  forward_decl.h  ss_vect.h  ss_vect_utils.h  test_tpsa_utils.cc  tps_type.h  tpsa_for_pm.cc  tpsa_for_pm.h  tpsa_lin.cc  tpsa_lin.h  tpsa_lin_pm.cc  tpsa_utils.cc  utils.h
src/tps/examples/: CMakeLists.txt  a_mul.cc  a_ss_vect.cc
thor/parser/glps/: CMakeLists.txt  latio.cc  latio.h  (+3 more)
thor/src/: CMakeLists.txt  Makefile.am  at_thor.cc  dynap.cc  eigenv.cc  ety.cc  exceptions.cc  field.cc  interpolation.cc  interpolation_elements.cc  lsoc.cc  naffutils.cc  param.cc  physlib.cc  prtmfile.cc  radia2tracy.cc  rdmfile.cc  set_errors.cc  t2cell.cc  t2elem.cc  t2lat.cc  t2ring.cc  thor_lib.cc  tpsa_for_pm.cc  tpsa_lin.cc  tpsa_lin_pm.cc  tpsa_utils.cc  tracy.cc  tracy_lib.cc  version.cc
(+180 files in other folders)
