[metadata]
name = thor_scsi
version = 0.0.0
url = https://github.com/jbengtson/thor-scsi-lib/
author = Johan Bengtsson, Pierre Schnizer
author_email = johan.bengtsson@helmholtz-berlin.de
	       pierre.schnizer@helmholtz-berlin.de
license = GPL
description = Self-Consistent Symplectic Integrator for Charged Particle Beam Dynamics
# long_description = file: ../README.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:

[build-system]
requires = setup_tools

[build_sphinx]
project = 'thor_scsi'
version = 0.0.0
release = 0.0.0
# source-dir = 'doc'
